# pydmc

./: .gitignore  .rsyncignore  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  pixi.toml  pyproject.toml
docs/: DEBUGGING_STAN_ERRORS.md  HIERARCHICAL_MODELS.md  RDEX_ABCD_README.md  mkdocs.yml
docs/docs/: index.md
examples/: rdex_abcd_example.py  rdex_abcd_tutorial.ipynb
notebooks/: 01-basic-example.ipynb  debug-runtime-error.ipynb  debug-sampling.ipynb  example.py  fix-hpc-permissions.ipynb  fix-log-probability-error.ipynb  pymc-example.ipynb
plans/: gpu_acceleration_plan.md
pydmc/: __init__.py  backends.py  models.py  rdex_abcd.py  utils.py
quarto/: _quarto.yml
