[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydmc"
version = "0.0.1"
description = "Python implementation of DMC (Dynamic Models of Choice) R package, specifically for RDEX-ABCD model"
authors = [
  { name = "Tony Barrows" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["pydmc"]
include = ["pyproject.toml", "pydmc/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pydmc"]
force-sort-within-sections = true

